@@ -4,7 +4,11 @@ Changes in b49:
 Fix is in PathUtil.pathIsCircular:  it doesn't count as a circular path if the
 relationship leading to the already-visited child is symmetric (disjoint_from
 or inverse of).
+- Greatly improved speed of using Parent Editor to add/delete parent
+relationships (SF 1963283: Parent Editor is very slow).  It no longer tries to
+find and select ALL instances of current term in OTE.
 
 Features:
 - [ 2086577 ] add parent to filter menu
-Adding "Parent" to search panel - enables searching for terms with a given parent.
+Added "Parent" to pulldown list in advanced options in search panel (click the
+gear icon) - enables searching for terms with a given parent.
